xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__simple_map_last.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(4, 5, 6) ! (fn:last())\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            3,
                        ),
                    ),
                    Atomic(
                        Integer(
                            3,
                        ),
                    ),
                    Atomic(
                        Integer(
                            3,
                        ),
                    ),
                ],
            },
        },
    ),
)
