xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__simple_map_multiple_steps.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2) ! (. + 1) ! (. + 2)\")"
---
Sequence(
    RefCell {
        value: Sequence {
            items: [
                Atomic(
                    Integer(
                        4,
                    ),
                ),
                Atomic(
                    Integer(
                        5,
                    ),
                ),
            ],
        },
    },
)
