xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__simple_map_multiple_steps2.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2) ! (. + 1) ! (. + 2) ! (. + 3)\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            7,
                        ),
                    ),
                    Atomic(
                        Integer(
                            8,
                        ),
                    ),
                ],
            },
        },
    ),
)
