xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__simple_map_position.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(4, 5, 6) ! (fn:position())\")"
---
Sequence(
    RefCell {
        value: Sequence {
            items: [
                Atomic(
                    Integer(
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        2,
                    ),
                ),
                Atomic(
                    Integer(
                        3,
                    ),
                ),
            ],
        },
    },
)
