xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__simple_map_sequence.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1, 2) ! (., 0)\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            1,
                        ),
                    ),
                    Atomic(
                        Integer(
                            0,
                        ),
                    ),
                    Atomic(
                        Integer(
                            2,
                        ),
                    ),
                    Atomic(
                        Integer(
                            0,
                        ),
                    ),
                ],
            },
        },
    ),
)
