xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__simple_map_single.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"1 ! (. , 0)\")"
---
Sequence(
    RefCell {
        value: Sequence {
            items: [
                Atomic(
                    Integer(
                        1,
                    ),
                ),
                Atomic(
                    Integer(
                        0,
                    ),
                ),
            ],
        },
    },
)
