xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__simple_string.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"'hello'\")"
---
Atomic(
    String(
        "hello",
    ),
)
