xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__some_quantifier_empty_sequence.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"some $x in () satisfies $x eq 5\")"
---
Ok(
    Atomic(
        Boolean(
            false,
        ),
    ),
)
